# hspec-demo

./: hspec-demo.cabal
src/: Math.hs
test/: LibSpec.hs  MathSpec.hs
