name:                hspec-demo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hspec-demo#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Math
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable hspec-demo-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hspec-demo
  default-language:    Haskell2010

test-suite hspec-demo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec-demo
                     , hspec, QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite math-spec
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MathSpec.hs
  build-depends:       base
                     , hspec-demo
                     , hspec, QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/MarekDudek/hspec-demo
